add features, blog

--- a/index.html
+++ b/index.html
@@ -5,5 +5,7 @@ title: Title
 
 {% include aida/attention.html %}
 {% include aida/interest.html %}
+{% include sections/features.html limit=3 %}
 {% include aida/desire.html %}
 {% include aida/action.html %}
+{% include sections/blog.html %}
